--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,1 +1,10 @@
 // entry point for styles
+@import "./base/custom-bootstrap";
+@import "./layout/header";
+@import "./layout/main";
+@import "./layout/footer";
+@import "./component/task";
+
+body {
+  height: 100vh;
+}
