--- a/src/sass/component/_task.scss
+++ b/src/sass/component/_task.scss
@@ -7,4 +7,11 @@
     @extend .my-1;
     flex-grow: 1;
   }
+
+  .task-completed-btn:checked {
+    + .task-description {
+      opacity: .5;
+      text-decoration: line-through;
+    }
+  }
 }
